--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -69,7 +69,7 @@
         <br><br>Para más información al respecto, por favor revise la <a href="https://drive.google.com/file/d/1NFvPJOEIhUV-v8Tr9nuDC_seqhYz1b46/view?usp=sharing">Política de Privacidad</a> completa.
         ]]>
     </string>
-    <string name="adjectives">[aburrid[o,a]]¶ [afectuos[o,a]]¶ ágil¶ agradable¶ alegre¶ amable¶ [amargad[o,a]]¶ [ambicios[o,a]]¶ amigable¶ angelical¶ [apasionad[o,a]]¶ [apátic[o,a]]¶ ardiente¶ [atent[o,a]]¶ [atontad[o,a]]¶ [atrevid[o,a]]¶ [aventurer[o,a]]¶ [avispad[o,a]]¶ [bast[o,a]]¶ beligerante¶ brillante¶ [burl[ón,ona]]¶ cascarrabias¶ [caut[o,a]]¶ [celos[o,a]]¶ [cínic[o,a]]¶ cobarde¶ coherente¶ [comprensiv[o,a]]¶ [concienzud[o,a]]¶ [conservador[,a]]¶ [considerad[o,a]]¶ [consternad[o,a]]¶ convencional¶ [conversador[,a]]¶ [coquet[o,a]]¶ cordial¶ cortante¶ cortés¶ [creíd[o,a]]¶ cruel¶ [cuidados[o,a]]¶ [curios[o,a]]¶ de actitud abierta¶ de actitud relajada¶ de buen trato¶ de humor cambiante¶ de mal carácter¶ de mal genio¶ de mentalidad cerrada¶ débil¶ dependiente¶ deprimente¶ [deprimid[o,a]]¶ [desaliñad[o,a]]¶ [desconfiad[o,a]]¶ [desconsiderad[o,a]]¶ [descuidad[o,a]]¶ [desocupad[o,a]]¶ [despreocupad[o,a]]¶ [dign[o,a]] de confianza¶ diligente¶ [diplomátic[o,a]]¶ [direct[o,a]]¶ [discret[o,a]]¶ [discutidor[,a]]¶ distante¶ [distraíd[o,a]]¶ [divertid[o,a]]¶ [dubitativ[o,a]]¶ dulce¶ [educad[o,a]]¶ eficiente¶ egoísta¶ elegante¶ [embuster[o,a]]¶ [emotiv[o,a]]¶ [emprendedor[,a]]¶ [encantador[,a]]¶ [energétic[o,a]]¶ [enfadad[o,a]]¶ [engreíd[o,a]]¶ [entrometid[o,a]]¶ [entusiasmad[o,a]]¶ [equilibrad[o,a]]¶ [escandalos[o,a]]¶ [escrupulos[o,a]]¶ [estoic[o,a]]¶ [estrict[o,a]]¶ [estúpid[o,a]]¶ [excéntric[o,a]]¶ exigente¶ [experimentad[o,a]]¶ [extrañ[o,a]]¶ [extravertid[o,a]]¶ [fervoros[o,a]]¶ fiable¶ fiel¶ [fof[o,a]]¶ formal¶ [frí[o,a]]¶ [generos[o,a]]¶ gentil¶ [gracios[o,a]]¶ [gruñ[ón,ona]]¶ hábil¶ [hermos[o,a]]¶ [histéric[o,a]]¶ [holgaz[án,ana]]¶ [honest[o,a]]¶ horrible¶ [hurañ[o,a]]¶ [imaginativ[o,a]]¶ imbécil¶ impaciente¶ [impetuos[o,a]]¶ [impulsiv[o,a]]¶ independiente¶ infantil¶ [ingenu[o,a]]¶ [inmadur[o,a]]¶ [inquiet[o,a]]¶ insensible¶ inteligente¶ interesante¶ intolerante¶ [intrépid[o,a]]¶ [juguet[ón,ona]]¶ [list[o,a]]¶ [llor[ón,ona]]¶ [loc[o,a]]¶ [madur[o,a]]¶ [maleducad[o,a]]¶ [malhumorad[o,a]]¶ [malicios[o,a]]¶ [mal[o,a]]¶ maternal¶ [melancólic[o,a]]¶ [meticulos[o,a]]¶ [modest[o,a]]¶ mordaz¶ [nervios[o,a]]¶ [odios[o,a]]¶ [orgullos[o,a]]¶ paciente¶ [pacífic[o,a]]¶ pasional¶ [pensativ[o,a]]¶ [perezos[o,a]]¶ perseverante¶ [perturbador[,a]]¶ [pesad[o,a]]¶ [pícar[o,a]]¶ [poderos[o,a]]¶ [positiv[o,a]]¶ [práctic[o,a]]¶ [presumid[o,a]]¶ [pretencios[o,a]]¶ [provocador[,a]]¶ prudente¶ puntual¶ [quisquillos[o,a]]¶ [reaci[o,a]]¶ realista¶ [recelos[o,a]]¶ [reservad[o,a]]¶ responsable¶ [ridícul[o,a]]¶ sagaz¶ [segur[o,a]]¶ [segur[o,a]] de sí [mism[o,a]]¶ [sensat[o,a]]¶ sensible¶ [seren[o,a]]¶ [seri[o,a]]¶ servicial¶ [sever[o,a]]¶ [simpátic[o,a]]¶ [sincer[o,a]]¶ [sofisticad[o,a]]¶ [somnolient[o,a]]¶ [sos[o,a]]¶ [suci[o,a]]¶ superficial¶ [tacañ[o,a]]¶ [taciturn[o,a]]¶ [talentos[o,a]]¶ [terc[o,a]]¶ [tímid[o,a]]¶ [tont[o,a]]¶ torpe¶ [trabajador[,a]]¶ [tranquilizador[,a]]¶ [tranquil[o,a]]¶ [travies[o,a]]¶ triste¶ útil¶ valiente¶ [venenos[o,a]]¶ vivaz</string>
+    <string name="adjective">[aburrid[o,a]]¶ [afectuos[o,a]]¶ ágil¶ agradable¶ alegre¶ amable¶ [amargad[o,a]]¶ [ambicios[o,a]]¶ amigable¶ angelical¶ [apasionad[o,a]]¶ [apátic[o,a]]¶ ardiente¶ [atent[o,a]]¶ [atontad[o,a]]¶ [atrevid[o,a]]¶ [aventurer[o,a]]¶ [avispad[o,a]]¶ [bast[o,a]]¶ beligerante¶ brillante¶ [burl[ón,ona]]¶ cascarrabias¶ [caut[o,a]]¶ [celos[o,a]]¶ [cínic[o,a]]¶ cobarde¶ coherente¶ [comprensiv[o,a]]¶ [concienzud[o,a]]¶ [conservador[,a]]¶ [considerad[o,a]]¶ [consternad[o,a]]¶ convencional¶ [conversador[,a]]¶ [coquet[o,a]]¶ cordial¶ cortante¶ cortés¶ [creíd[o,a]]¶ cruel¶ [cuidados[o,a]]¶ [curios[o,a]]¶ de actitud abierta¶ de actitud relajada¶ de buen trato¶ de humor cambiante¶ de mal carácter¶ de mal genio¶ de mentalidad cerrada¶ débil¶ dependiente¶ deprimente¶ [deprimid[o,a]]¶ [desaliñad[o,a]]¶ [desconfiad[o,a]]¶ [desconsiderad[o,a]]¶ [descuidad[o,a]]¶ [desocupad[o,a]]¶ [despreocupad[o,a]]¶ [dign[o,a]] de confianza¶ diligente¶ [diplomátic[o,a]]¶ [direct[o,a]]¶ [discret[o,a]]¶ [discutidor[,a]]¶ distante¶ [distraíd[o,a]]¶ [divertid[o,a]]¶ [dubitativ[o,a]]¶ dulce¶ [educad[o,a]]¶ eficiente¶ egoísta¶ elegante¶ [embuster[o,a]]¶ [emotiv[o,a]]¶ [emprendedor[,a]]¶ [encantador[,a]]¶ [energétic[o,a]]¶ [enfadad[o,a]]¶ [engreíd[o,a]]¶ [entrometid[o,a]]¶ [entusiasmad[o,a]]¶ [equilibrad[o,a]]¶ [escandalos[o,a]]¶ [escrupulos[o,a]]¶ [estoic[o,a]]¶ [estrict[o,a]]¶ [estúpid[o,a]]¶ [excéntric[o,a]]¶ exigente¶ [experimentad[o,a]]¶ [extrañ[o,a]]¶ [extravertid[o,a]]¶ [fervoros[o,a]]¶ fiable¶ fiel¶ [fof[o,a]]¶ formal¶ [frí[o,a]]¶ [generos[o,a]]¶ gentil¶ [gracios[o,a]]¶ [gruñ[ón,ona]]¶ hábil¶ [hermos[o,a]]¶ [histéric[o,a]]¶ [holgaz[án,ana]]¶ [honest[o,a]]¶ horrible¶ [hurañ[o,a]]¶ [imaginativ[o,a]]¶ imbécil¶ impaciente¶ [impetuos[o,a]]¶ [impulsiv[o,a]]¶ independiente¶ infantil¶ [ingenu[o,a]]¶ [inmadur[o,a]]¶ [inquiet[o,a]]¶ insensible¶ inteligente¶ interesante¶ intolerante¶ [intrépid[o,a]]¶ [juguet[ón,ona]]¶ [list[o,a]]¶ [llor[ón,ona]]¶ [loc[o,a]]¶ [madur[o,a]]¶ [maleducad[o,a]]¶ [malhumorad[o,a]]¶ [malicios[o,a]]¶ [mal[o,a]]¶ maternal¶ [melancólic[o,a]]¶ [meticulos[o,a]]¶ [modest[o,a]]¶ mordaz¶ [nervios[o,a]]¶ [odios[o,a]]¶ [orgullos[o,a]]¶ paciente¶ [pacífic[o,a]]¶ pasional¶ [pensativ[o,a]]¶ [perezos[o,a]]¶ perseverante¶ [perturbador[,a]]¶ [pesad[o,a]]¶ [pícar[o,a]]¶ [poderos[o,a]]¶ [positiv[o,a]]¶ [práctic[o,a]]¶ [presumid[o,a]]¶ [pretencios[o,a]]¶ [provocador[,a]]¶ prudente¶ puntual¶ [quisquillos[o,a]]¶ [reaci[o,a]]¶ realista¶ [recelos[o,a]]¶ [reservad[o,a]]¶ responsable¶ [ridícul[o,a]]¶ sagaz¶ [segur[o,a]]¶ [segur[o,a]] de sí [mism[o,a]]¶ [sensat[o,a]]¶ sensible¶ [seren[o,a]]¶ [seri[o,a]]¶ servicial¶ [sever[o,a]]¶ [simpátic[o,a]]¶ [sincer[o,a]]¶ [sofisticad[o,a]]¶ [somnolient[o,a]]¶ [sos[o,a]]¶ [suci[o,a]]¶ superficial¶ [tacañ[o,a]]¶ [taciturn[o,a]]¶ [talentos[o,a]]¶ [terc[o,a]]¶ [tímid[o,a]]¶ [tont[o,a]]¶ torpe¶ [trabajador[,a]]¶ [tranquilizador[,a]]¶ [tranquil[o,a]]¶ [travies[o,a]]¶ triste¶ útil¶ valiente¶ [venenos[o,a]]¶ vivaz</string>
     <string name="app_name">Adivinador</string>
     <string name="about_title">Acerca de</string>
     <string name="action_back">Regresar</string>
@@ -95,7 +95,6 @@
     <string name="compatibility_result"><![CDATA[Compatibilidad: <b>%1$s</b>]]></string>
     <string name="data_entry">Introducir datos</string>
     <string name="date_component">Ya es¶ Hoy es¶ Estamos a¶ El día de hoy es¶ La fecha es¶ Hoy estamos a¶ El día es</string>
-    <string name="default_person">tú</string>
     <string name="denied_permission">Algunas funciones serán deshabilitadas debido a que no se tienen todos los permisos.</string>
     <string name="donations_description">¡Por favor, considera donar algo de dinero para el desarrollo de la aplicación, eso me permitirá hacer esta aplicación aun mejor! Google Play Store aplica un porcentaje de impuestos dependiendo de tu país.</string>
     <string name="donations_donate">¡DONAR!</string>
@@ -113,14 +112,14 @@
     <string name="input_title">Introducir datos</string>
     <string name="inquiry">Obtener consulta (%1$s)</string>
     <string name="inquiry_information">Consulta para el día %1$s de %2$s, de género %3$s (%4$s)</string>
-    <string name="interjections">Dios¶ Dios santo¶ ah¶ ahí va¶ ajajá¶ ajá¶ ajó¶ anda¶ ar¶ arre¶ arrea¶ ay¶ ay Dios mío¶ ay de mí¶ ay, güey¶ aúpa¶ bah¶ bravo¶ bua¶ buah¶ bum¶ buu¶ buuu¶ ca¶ caracoles¶ carajo¶ caramba¶ caray¶ cataplof¶ cataplúm¶ chas¶ chist¶ cielo santo¶ cielos¶ cojonudo¶ cáspita¶ dale¶ diablos¶ ea¶ eh¶ ejem¶ em¶ epa¶ equilicuá¶ eso es¶ ey¶ gluglú¶ guau¶ guay¶ hala¶ hale¶ hey¶ hola¶ huh¶ hum¶ hurra¶ huy¶ ja¶ ja, ja¶ ja, ja, ja¶ je¶ jo¶ jolín¶ madre mía¶ maldición¶ miau¶ mm¶ mmm¶ muak¶ narices¶ oh¶ oiga¶ ojalá¶ ojú¶ okey¶ ole¶ olé¶ ostras¶ paf¶ pché¶ plas¶ ps¶ psh¶ pss¶ pu¶ puaf¶ puaj¶ puf¶ pum¶ quiá¶ recórcholis¶ rin rin¶ shhh¶ ssh¶ tatata¶ tictac¶ tururú¶ uf¶ uh¶ ups¶ urra¶ uy¶ vaya¶ válgame Dios¶ yey¶ yupi¶ zas¶ zaz¶ ñam¶ órale</string>
+    <string name="interjection">Dios¶ Dios santo¶ ah¶ ahí va¶ ajajá¶ ajá¶ ajó¶ anda¶ ar¶ arre¶ arrea¶ ay¶ ay Dios mío¶ ay de mí¶ ay, güey¶ aúpa¶ bah¶ bravo¶ bua¶ buah¶ bum¶ buu¶ buuu¶ ca¶ caracoles¶ carajo¶ caramba¶ caray¶ cataplof¶ cataplúm¶ chas¶ chist¶ cielo santo¶ cielos¶ cojonudo¶ cáspita¶ dale¶ diablos¶ ea¶ eh¶ ejem¶ em¶ epa¶ equilicuá¶ eso es¶ ey¶ gluglú¶ guau¶ guay¶ hala¶ hale¶ hey¶ hola¶ huh¶ hum¶ hurra¶ huy¶ ja¶ ja, ja¶ ja, ja, ja¶ je¶ jo¶ jolín¶ madre mía¶ maldición¶ miau¶ mm¶ mmm¶ muak¶ narices¶ oh¶ oiga¶ ojalá¶ ojú¶ okey¶ ole¶ olé¶ ostras¶ paf¶ pché¶ plas¶ ps¶ psh¶ pss¶ pu¶ puaf¶ puaj¶ puf¶ pum¶ quiá¶ recórcholis¶ rin rin¶ shhh¶ ssh¶ tatata¶ tictac¶ tururú¶ uf¶ uh¶ ups¶ urra¶ uy¶ vaya¶ válgame Dios¶ yey¶ yupi¶ zas¶ zaz¶ ñam¶ órale</string>
     <string name="locale">es</string>
     <string name="menu_donate">Donar</string>
     <string name="menu_settings">Configuración</string>
     <string name="menu_about">Acerca de</string>
     <string name="menu_exit">Salir</string>
     <string name="name_generation">Generar nombre</string>
-    <string name="nouns">existencia｢2｣¶ materia｢2｣¶ persona｢2｣¶ ser｢1｣¶ [human[o,a]]¶ [individu[o,a]]¶ entidad｢2｣¶ [[hombre,mujer]]¶ [client[e,a]]¶ sujeto｢1｣¶ ente｢1｣¶ esencia｢2｣¶ cosa｢2｣¶ sustancia｢2｣¶ criatura｢2｣¶ organismo｢1｣¶ forma｢2｣¶ espécimen｢1｣¶ forma de vida｢2｣¶ ser vivo｢1｣¶ [usuari[o,a]]¶ [amig[o,a]]¶ [conocid[o,a]]¶ [desconocid[o,a]]¶ colega｢0｣¶ camarada｢0｣¶ mejor [amig[o,a]]¶ [novi[o,a]]¶ [tip[o,a]]¶ personaje｢1｣¶ vástago｢1｣¶ figura｢2｣¶ habitante｢1｣¶ [muchach[o,a]]¶ joven｢0｣¶ [chic[o,a]]¶ personificación｢2｣</string>
+    <string name="noun">existencia｢2｣¶ materia｢2｣¶ persona｢2｣¶ ser｢1｣¶ [human[o,a]]¶ [individu[o,a]]¶ entidad｢2｣¶ [[hombre,mujer]]¶ [client[e,a]]¶ sujeto｢1｣¶ ente｢1｣¶ esencia｢2｣¶ cosa｢2｣¶ sustancia｢2｣¶ criatura｢2｣¶ organismo｢1｣¶ forma｢2｣¶ espécimen｢1｣¶ forma de vida｢2｣¶ ser vivo｢1｣¶ [usuari[o,a]]¶ [amig[o,a]]¶ [conocid[o,a]]¶ [desconocid[o,a]]¶ colega｢0｣¶ camarada｢0｣¶ mejor [amig[o,a]]¶ [novi[o,a]]¶ [tip[o,a]]¶ personaje｢1｣¶ vástago｢1｣¶ figura｢2｣¶ habitante｢1｣¶ [muchach[o,a]]¶ joven｢0｣¶ [chic[o,a]]¶ personificación｢2｣</string>
     <string name="ok">OK</string>
     <string name="person_data"><![CDATA[%1$s<font color="#F6FBB2">, de género %2$s (%3$s)</font>]]></string>
     <string name="person_details">Detalles personales</string>
@@ -238,7 +237,7 @@
     <string name="preference_theme_summary">Cambia el tema de la aplicación</string>
     <string name="preference_update_frequency">Frecuencia de actualización</string>
     <string name="preference_update_frequency_summary">Cambia el tiempo que tarda en actualizarse la predicción</string>
-    <string name="qualitative_adjectives">{[agradable]; plural:+s}¶ {[brillante]; plural:+s}¶ {[desagradable]; plural:+s}¶ {[diferente]; plural:+s}¶ {[frágil]; plural:+es}¶ {[electrizante]; plural:+s}¶ {[grandios[o,a]]; plural:+s}¶ {[mejor]; plural:+es}¶ {[normal]; plural:+es}¶ {[negativ[o,a]]; plural:+s}¶ {[oscur[o,a]]; plural:+s}¶ {[peor]; plural:+es}¶ {[positiv[o,a]]; plural:+s}¶ {[rar[o,a]]; plural:+s}¶ {[sólid[o,a]]; plural:+s}¶ {[terrible]; plural:+s}</string>
+    <string name="qualitative_adjective">{[agradable]; plural:+s}¶ {[brillante]; plural:+s}¶ {[desagradable]; plural:+s}¶ {[diferente]; plural:+s}¶ {[frágil]; plural:+es}¶ {[electrizante]; plural:+s}¶ {[grandios[o,a]]; plural:+s}¶ {[mejor]; plural:+es}¶ {[normal]; plural:+es}¶ {[negativ[o,a]]; plural:+s}¶ {[oscur[o,a]]; plural:+s}¶ {[peor]; plural:+es}¶ {[positiv[o,a]]; plural:+s}¶ {[rar[o,a]]; plural:+s}¶ {[sólid[o,a]]; plural:+s}¶ {[terrible]; plural:+s}</string>
     <string name="relative">[[padre,madre]]¶ [[papá,mamá]]¶ [hij[o,a]]¶ [prim[o,a]]¶ [tí[o,a]]¶ [sobrin[o,a]]¶ [herman[o,a]]¶ [abuel[o,a]]¶ [niet[o,a]]¶ [bisabuel[o,a]]</string>
     <string name="reload">Generar consulta</string>
     <string name="save">Guardar consulta</string>
@@ -246,10 +245,6 @@
     <string name="situation_descriptor">{rand:∅; bueno; malo; extraño; sorprendente; desconcertante; favorable; desfavorable}</string>
     <string name="time_component">La hora es¶ La hora actual es¶ En este momento la hora es¶ El reloj marca la(s)¶ La hora en este momento es¶ Tengo la hora</string>
     <string name="time_elapsed">%1$d año(s), %2$d mes(es), %3$d día(s)</string>
-    <string name="title">%3$s de %2$s %1$s</string>
-    <string name="title_descriptor">[^superior]¶ [^senior]¶ [^adjunt[o,a]]¶ [^corporativ[o,a]]¶ [^dinámic[o,a]]¶ [^futur[o,a]]¶ de [^producto]¶ [^nacional]¶ [^regional]¶ [^local]¶ [^distrital]¶ [^central]¶ [^global]¶ del [^cliente]¶ de [^inversión]¶ [^dinámic[o,a]]¶ [^internacional]¶ [^patrimonial]¶ [^avanzad[o,a]]¶ [^intern[o,a]]¶ [^human[o,a]]¶ [^jefe[,a]]¶ [^principal]</string>
-    <string name="title_job">[^supervisor[,a]]¶ [^asociad[o,a]]¶ [^ejecutiv[o,a]]¶ [^intermediari[o,a]]¶ [^oficial]¶ [^gerente]¶ [^ingenier[o,a]]¶ [^especialista]¶ [^director[,a]]¶ [^coordinador[,a]]¶ [^administrador[,a]]¶ [^arquitect[o,a]]¶ [^analista]¶ [^diseñador[,a]]¶ [^planificador[,a]]¶ [^orquestador[,a]]¶ [^técnic[o,a]]¶ [^desarrollador[,a]]¶ [^productor[,a]]¶ [^consultor[,a]]¶ [^asistente]¶ [^facilitador[,a]]¶ [^agente]¶ [^representante]¶ [^estratega]</string>
-    <string name="title_level">[^soluciones]¶ [^programa]¶ [^marca]¶ [^seguridad]¶ [^investigación]¶ [^soluciones]¶ [^directivas]¶ [^implementación]¶ [^integración]¶ [^funcionalidad]¶ [^respuesta]¶ [^integración]¶ [^tácticas]¶ [^identidad]¶ [^mercados]¶ [^grupo]¶ [^división]¶ [^aplicaciones]¶ [^optimización]¶ [^operaciones]¶ [^infraestructura]¶ [^intranet]¶ [^comunicaciones]¶ [^web]¶ [^marca]¶ [^calidad]¶ [^aseguramiento]¶ [^movilidad]¶ [^cuentas]¶ [^integración]¶ [^creativo]¶ [^configuración]¶ [^rendición] de [^cuentas]¶ [^interacciones]¶ [^factores]¶ [^usabilidad]¶ [^métricas]¶ [^atención]</string>
     <string name="toast_clipboard_error">No se pudo copiar el texto al portapapeles.</string>
     <string name="toast_clipboard_success">Texto copiado al portapapeles.</string>
     <string name="toast_inquiry_not_saved">No se pudo guardar la consulta.</string>
@@ -1226,14 +1221,14 @@
         <item>Leo, Escorpio, Géminis, Cáncer, Virgo.</item>
     </string-array>
     <string-array name="conversation_greeting">
-        <item>{string:greetings}.</item>
-        <item>{string:greetings}. {string:greeting_variant}</item>
-        <item>{string:greetings}, {string:conversation_addendum}.</item>
-        <item>{string:greetings}, {string:conversation_addendum}. {string:greeting_variant}</item>
+        <item>{string:greeting}.</item>
+        <item>{string:greeting}. {string:greeting_variant}</item>
+        <item>{string:greeting}, {string:conversation_addendum}.</item>
+        <item>{string:greeting}, {string:conversation_addendum}. {string:greeting_variant}</item>
     </string-array>
     <string-array name="conversation_addendum">
         <item><![CDATA[<font color="{method:getDefaultColor}"><b>{string:subject; gender:⛌}</b></font>]]></item>
-        <item><![CDATA[<i>{string:interjections}</i>]]></item>
+        <item><![CDATA[<i>{string:interjection}</i>]]></item>
         <item><![CDATA[<font color="{method:getDefaultColor}"><b>{[usuari[o,a]]; gender:⛌} de {method:getDeviceInfo}</b></font>]]></item>
     </string-array>
     <string-array name="day_period">
@@ -1362,7 +1357,7 @@
         <item>{string:explicit_cause; gender:⸮}</item>
     </string-array>
     <string-array name="divination_end">
-        <item>{[será]; plural:serán} {string:qualitative_adjectives; gender:＃}.</item>
+        <item>{[será]; plural:serán} {string:qualitative_adjective; gender:＃}.</item>
         <item>{[tendrá]; plural:tendrán} cambios positivos.</item>
         <item>{[tendrá]; plural:tendrán} cambios negativos.</item>
         <item>se {[verá]; plural:verán} {[afectad[o,a]]; gender:＃; plural:+s} de manera positiva.</item>
@@ -2973,9 +2968,9 @@
         <item>{method:getFormattedName} conoce a {method:getFormattedName}.</item>
         <item>Tengo que decirle algo a {method:getFormattedName}.</item>
         <item>Debo ver el futuro de {method:getFormattedName}.</item>
-        <item>{method:getFormattedName} es una persona {string:adjectives; gender:2}.</item>
-        <item>{method:getFormattedName} es un sujeto {string:adjectives; gender:1⸡.</item>
-        <item>{method:getFormattedName} es un individuo {string:adjectives; gender:1}.</item>
+        <item>{method:getFormattedName} es una persona {string:adjective; gender:2}.</item>
+        <item>{method:getFormattedName} es un sujeto {string:adjective; gender:1⸡.</item>
+        <item>{method:getFormattedName} es un individuo {string:adjective; gender:1}.</item>
         <item>{method:getFormattedName} y su {string:relative; gender:⸮} se llevan muy bien.</item>
         <item>{method:getFormattedName} y su {string:relative; gender:⸮} tienen una mala relación.</item>
         <item>{method:getFormattedName} y su {string:relative; gender:⸮} se tratan muy mal.</item>
@@ -3414,9 +3409,9 @@
         <item>¡Hola, luz de mis ojos!</item>
     </string-array>
     <string-array name="subject">
-        <item>{string:nouns} ⸠string:adjectives⸡</item>
-        <item>{string:nouns}</item>
-        <item>{string:adjectives}</item>
+        <item>{string:noun} ⸠string:adjective⸡</item>
+        <item>{string:noun}</item>
+        <item>{string:adjective}</item>
     </string-array>
     <string-array name="unspecific_person">
         <item>[un[,a]] [amig[o,a]]</item>
